--- a/marryou-web/src/main/resources/application.properties
+++ b/marryou-web/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=prod
+
 swagger.title=marryou-wms
 swagger.description=Starter for swagger 2.x
 swagger.version=1.1.0.RELEASE
@@ -29,28 +31,6 @@ spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.prefix=classpath:/templates/
 # Suffix that gets appended to view names when building a URL.
 spring.thymeleaf.suffix=.html
-
-server.port=8090
-
-#database-----------------------------------------------
-#spring.datasource.url=jdbc:mysql://localhost:3306/wms?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-spring.datasource.url=jdbc:mysql://172.18.231.159:3306/wms?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-spring.datasource.username=root
-#spring.datasource.password=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#redis---------------------------------------------------
-#redis主机地址
-spring.redis.hostName=172.18.231.159
-#redis主机端口
-spring.redis.port=6379
-#redis链接密码
-spring.redis.password=
-spring.redis.pool.maxActive=100
-spring.redis.pool.maxWait=10000
-spring.redis.pool.maxIdle=100
-spring.redis.pool.minIdle=0
-spring.redis.timeout=10000
 
 #druid
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -84,12 +64,9 @@ spring.jpa.database = MYSQL
 # Show or not log for each sql query
 spring.jpa.show-sql = false
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = TableUpperCaseImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 #spring.jpa.database-platform = MYSQL
 
-
-########custom##########
-base.domain.url = http://www.yicaijituan.cn
