--- a/marryou-web/pom.xml
+++ b/marryou-web/pom.xml
@@ -27,17 +27,7 @@
     <dependencies>
         <dependency>
             <groupId>com.marryou</groupId>
-            <artifactId>marryou-metadata</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.marryou</groupId>
-            <artifactId>marryou-commons-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.marryou</groupId>
-            <artifactId>marryou-commons-web</artifactId>
+            <artifactId>marryou-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
