添加二维码上传oss功能

--- a/marryou-web/src/main/resources/application-prod.properties
+++ b/marryou-web/src/main/resources/application-prod.properties
@@ -22,3 +22,10 @@ spring.redis.timeout=10000
 ########custom##########
 base.domain.url = http://www.yicaijituan.cn
 img.middle.url = /images
+
+#oss
+oss.access.id=
+oss.access.key=
+oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
+oss.bucket.name=
+oss.server.url=
