--- a/marryou-web/src/main/resources/application-test.properties
+++ b/marryou-web/src/main/resources/application-test.properties
@@ -1,8 +1,8 @@
 server.port=8091
 
 #database-----------------------------------------------
-#spring.datasource.url=jdbc:mysql://172.18.231.159:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-spring.datasource.url=jdbc:mysql://119.23.210.125:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://172.18.231.159:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+#spring.datasource.url=jdbc:mysql://119.23.210.125:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.password=
@@ -23,3 +23,10 @@ spring.redis.timeout=10000
 ########custom##########
 base.domain.url = http://test.yicaijituan.cn
 img.middle.url = /images/test
+
+#oss
+oss.access.id=
+oss.access.key=
+oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
+oss.bucket.name=
+oss.server.url=
