redis登录名缓存添加公司名称前缀，避免多系统共用redis冲突

--- a/marryou-web/src/main/resources/application-prod.properties
+++ b/marryou-web/src/main/resources/application-prod.properties
@@ -29,3 +29,6 @@ oss.access.key=
 oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
 oss.bucket.name=
 oss.server.url=
+
+#campany
+campany=songneng
