--- a/marryou-web/src/main/resources/application-test.properties
+++ b/marryou-web/src/main/resources/application-test.properties
@@ -1,7 +1,7 @@
 server.port=8091
 
 #database-----------------------------------------------
-spring.datasource.url=jdbc:mysql://172.18.231.159:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://rm-wz9glt7jdme98f13c.mysql.rds.aliyuncs.com:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 #spring.datasource.url=jdbc:mysql://119.23.210.125:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 spring.datasource.username=root
 #spring.datasource.password=root
@@ -30,3 +30,6 @@ oss.access.key=
 oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
 oss.bucket.name=
 oss.server.url=
+
+#campany
+campany=songneng_test
