--- a/marryou-web/src/main/resources/application-test.properties
+++ b/marryou-web/src/main/resources/application-test.properties
@@ -28,8 +28,7 @@ img.middle.url = /images/test
 oss.access.id=
 oss.access.key=
 oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
-oss.bucket.name=
-oss.server.url=
-
+oss.bucket.name=test-unique-images
+oss.server.url=http://test-images.yicaijituan.cn/
 #campany
 campany=songneng_test
