--- a/marryou-web/src/main/resources/application-prod.properties
+++ b/marryou-web/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
-server.port=8090
+server.port=8091
 
 #database-----------------------------------------------
 #spring.datasource.url=jdbc:mysql://172.18.231.159:3306/wms?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-spring.datasource.url=jdbc:mysql://119.23.210.125:3306/wms?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+#spring.datasource.url=jdbc:mysql://119.23.210.125:3306/wms?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://rm-wz9glt7jdme98f13c.mysql.rds.aliyuncs.com:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -20,15 +21,15 @@ spring.redis.pool.minIdle=0
 spring.redis.timeout=10000
 
 ########custom##########
-base.domain.url = http://www.yicaijituan.cn
+base.domain.url = http://sn.51flyash.com
 img.middle.url = /images
 
 #oss
 oss.access.id=
 oss.access.key=
 oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
-oss.bucket.name=
-oss.server.url=
+oss.bucket.name=unique-images
+oss.server.url=http://images.51flyash.com/
 
 #campany
 campany=songneng
