--- a/marryou-web/src/main/resources/application-prod.properties
+++ b/marryou-web/src/main/resources/application-prod.properties
@@ -1,14 +1,14 @@
 server.port=8090
 
 #database-----------------------------------------------
-#spring.datasource.url=jdbc:mysql://172.18.231.159:3306/wms?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-spring.datasource.url=jdbc:mysql://119.23.210.125:3306/wms?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-spring.datasource.username=root
+#spring.datasource.url=
+spring.datasource.url=
+spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #redis---------------------------------------------------
 #redis主机地址
-spring.redis.hostName=172.18.231.159
+spring.redis.hostName=
 #redis主机端口
 spring.redis.port=6379
 #redis链接密码
@@ -26,6 +26,6 @@ img.middle.url = /images
 #oss
 oss.access.id=
 oss.access.key=
-oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
+oss.endpoint=
 oss.bucket.name=
 oss.server.url=
