--- a/marryou-web/src/main/resources/application.properties
+++ b/marryou-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=prod
 
 swagger.title=marryou-wms
 swagger.description=Starter for swagger 2.x
@@ -69,4 +69,5 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.naming-strategy = TableUpperCaseImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 #spring.jpa.database-platform = MYSQL
+spring.jpa.open-in-view=true
 
