--- a/marryou-web/src/main/resources/application-test.properties
+++ b/marryou-web/src/main/resources/application-test.properties
@@ -1,19 +1,19 @@
 server.port=8091
 
 #database-----------------------------------------------
-spring.datasource.url=jdbc:mysql://172.18.231.159:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-#spring.datasource.url=jdbc:mysql://119.23.210.125:3306/songneng?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.url=
+spring.datasource.url=
+spring.datasource.username=
 spring.datasource.password=
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #redis---------------------------------------------------
 #redis主机地址
-spring.redis.hostName=172.18.231.159
+spring.redis.hostName=localhost
 #redis主机端口
 spring.redis.port=6379
 #redis链接密码
-spring.redis.password=
+spring.redis.password=redis
 spring.redis.pool.maxActive=100
 spring.redis.pool.maxWait=10000
 spring.redis.pool.maxIdle=100
@@ -21,12 +21,12 @@ spring.redis.pool.minIdle=0
 spring.redis.timeout=10000
 
 ########custom##########
-base.domain.url = http://test.yicaijituan.cn
-img.middle.url = /images/test
+base.domain.url =
+img.middle.url =
 
 #oss
 oss.access.id=
 oss.access.key=
-oss.endpoint=http://oss-cn-shenzhen-internal.aliyuncs.com
+oss.endpoint=
 oss.bucket.name=
 oss.server.url=
